Fix shifted umsu logo

--- a/src/assets/css/hero/uni_affiliation.css
+++ b/src/assets/css/hero/uni_affiliation.css
@@ -16,4 +16,5 @@
 .logo {
     max-width: 70%;
     height: auto;
+    display: inline-block;
 }
